--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
 @import "tailwindcss";
+
+@layer base {
+  html {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
+
+
+body {
+  @apply box-border m-0 p-0;
+}
+
+.slick-side{
+  padding: 10px;
+}
+
+.slick-prev,.slick-next{
+  background-color: #c2c1c1;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  z-index: 1;
+}
+
+.slick-prev:before, .slick-next::before{
+  color: rgb(108, 107, 107);
+}
